--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title></title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <h1> Discover hidden places in the world around you </h1>
-    <a href="https://eurv7qs0pipj6qjg4g12dsb3fg5neo600kni4jo34oukdj4mpt50.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+    <link href="resources/css/style.css" rel="stylesheet">
   </head>
   <body>
-<p>
-<video src="resources/videos/excursion.mp4" autoplay loop></video>
-</p>
-<h2> Your personal travel guide </h2>
-<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-<p>
-  <img src="./resources/images/camp.jpg"/>
-</p>
-<p>
-<img src="./resources/images/phone.png"/>
-</p>
-<h2> Coming Soon for iPhone and Android </h2>
-<a href="https://eurv7qs0pipj6qjg4g12dsb3fg5neo600kni4jo34oukdj4mpt50.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
-<footer> &copy; Excursion </footer>
+    <!-- Landing Section -->
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <!--Info Section -->
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+
+
+    <!-- Coming Soon Secion -->
+    <p><img src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+
+    <!-- Footer -->
+    <div class="footer">
+    <footer>&copy; Excursion</footer>
+    </div>
+
   </body>
 </html>
